--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -522,6 +522,10 @@ add_executable(db_test1
 "${PROJECT_SOURCE_DIR}/test/test.cpp"
       )
 target_link_libraries(db_test1 PRIVATE leveldb gtest)
+add_executable(db_test2
+"${PROJECT_SOURCE_DIR}/test/test2.cpp"
+      )
+target_link_libraries(db_test2 PRIVATE leveldb gtest)
 add_executable(db_test_bench
 "${PROJECT_SOURCE_DIR}/test/benchmark_4leveldb.cpp"
       )
