--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,8 @@ target_sources(leveldb
     "db/db_impl.h"
     "db/db_iter.cc"
     "db/db_iter.h"
+    "db/prefetch_iter.cc"
+    "db/prefetch_iter.h"
     "db/dbformat.cc"
     "db/dbformat.h"
     "db/dumpfile.cc"
