--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "third_party/benchmark"]
 	path = third_party/benchmark
 	url = https://github.com/google/benchmark
+[submodule "YCSB-cpp"]
+	path = YCSB-cpp
+	url = https://github.com/ls4154/YCSB-cpp.git
