--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/google/googletest.git
 [submodule "third_party/benchmark"]
 	path = third_party/benchmark
-	url = https://github.com/google/benchmark
+	url = https://github.com/google/benchmark.git
 [submodule "YCSB-cpp"]
 	path = YCSB-cpp
 	url = https://github.com/zerowinter0/my_YCSB_benchmark.git
