final update for codes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -525,15 +525,7 @@ if(LEVELDB_INSTALL)
     DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
   )
 endif(LEVELDB_INSTALL)
-add_executable(db_test1
+add_executable(valuelogTest
 "${PROJECT_SOURCE_DIR}/test/test.cpp"
       )
-target_link_libraries(db_test1 PRIVATE leveldb gtest)
-add_executable(db_test2
-"${PROJECT_SOURCE_DIR}/test/test2.cpp"
-      )
-target_link_libraries(db_test2 PRIVATE leveldb gtest)
-add_executable(db_test_bench
-"${PROJECT_SOURCE_DIR}/test/benchmark_4leveldb.cpp"
-      )
-target_link_libraries(db_test_bench PRIVATE leveldb gtest)
+target_link_libraries(valuelogTest PRIVATE leveldb gtest)
